--- a/terms.html
+++ b/terms.html
@@ -53,6 +53,16 @@
   <!-- Compressed Scripts -->
   <script src="js/slides.min.js?503341" type="text/javascript"></script>
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154672714-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-154672714-1');
+  </script>
+
 </head>
 
 <body class="slides animated noPreload">
