--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <meta name="description" content="Pine is a community with you and everyone in your city" />
   <meta name="og:description" content="Pine is a community with you and everyone in your city" />
   <meta name="twitter:description" content="Pine is a community with you and everyone in your city" />
-  <meta name="og:image" content="assets/img/background/img-12.jpg" />
-  <meta name="twitter:image" content="assets/img/background/img-12.jpg" />
+  <meta name="og:image" content="assets/img/background/img-11.jpg" />
+  <meta name="twitter:image" content="assets/img/background/img-11.jpg" />
   <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-
+  <link rel="shortcut icon" href="assets/img/favicon.ico">
   <!-- Fix flash of unstyled content  -->
   <style>
     html:not(.page-loaded) svg,
