--- a/terms.html
+++ b/terms.html
@@ -15,7 +15,7 @@
   <meta name="og:image" content="assets/img/background/img-12.jpg" />
   <meta name="twitter:image" content="assets/img/background/img-12.jpg" />
   <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-
+  <link rel="shortcut icon" href="assets/img/favicon.ico">
   <!-- Fix flash of unstyled content  -->
   <style>
     html:not(.page-loaded) svg,
