--- a/privacy.html
+++ b/privacy.html
@@ -15,7 +15,7 @@
   <meta name="og:image" content="assets/img/background/img-12.jpg" />
   <meta name="twitter:image" content="assets/img/background/img-12.jpg" />
   <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-  <link rel="shortcut icon" href="assets/img/favicon.ico">
+  <link rel="shortcut icon" href="assets/img/favicon.ico" />
   <!-- Fix flash of unstyled content  -->
   <style>
     html:not(.page-loaded) svg,
@@ -63,6 +63,17 @@
     gtag('config', 'UA-154672714-1');
   </script>
 
+  <!-- Hotjar Tracking Code for www.pineapp.co -->
+  <script>
+      (function(h,o,t,j,a,r){
+          h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+          h._hjSettings={hjid:1614643,hjsv:6};
+          a=o.getElementsByTagName('head')[0];
+          r=o.createElement('script');r.async=1;
+          r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+          a.appendChild(r);
+      })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+  </script>
 </head>
 
 <body class="slides animated noPreload">
