used pine blue for cta

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <div class="margin-top-3">
               <form class="slides-form" action="https://pine357121.typeform.com/to/A8sCC7" target="_blank" autocomplete="off">
                 <!-- <input type="email" class="input-12 rounded ae-5 fromLeft" name="email" placeholder="Email address" /> -->
-                <button type="submit" class="button blue rounded ae-7 fromCenter" name="button">Get Early Access</button>
+                <button type="submit" class="button blue rounded ae-7 fromCenter" name="button">Get early access 😻</button>
               </form>
               <!-- <p class="large margin-top-3 ae-3"><span class="opacity-8">Start now and get <b>free bonus</b> on account</span></p> -->
             </div>
