text corrections quit
exit

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
           <div class="fix-7-12">
             <h1 class="margin-bottom-2 ae-1">🌲 Pine</h1>
-            <p class="larger light ae-2"><span class="opacity-8">A community with everyone in your city. We bring together people living in a city and enable them to engage with each others</p>
+            <p class="larger light ae-2"><span class="opacity-8">A community with everyone in your city. We group people living in a city and enable them to engage with each other</p>
             <div class="margin-top-3">
               <form class="slides-form" action="https://pine357121.typeform.com/to/A8sCC7" target="_blank" autocomplete="off">
                 <!-- <input type="email" class="input-12 rounded ae-5 fromLeft" name="email" placeholder="Email address" /> -->
